<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_app_category"
        android:key="pref_app_category"
        app:iconSpaceReserved="false">
        <ListPreference
            android:key="pref_default_nav_location"
            android:title="@string/pref_default_landing_page_title"
            android:summary="@string/pref_default_landing_page_message"
            android:entries="@array/default_landing_pages"
            android:entryValues="@array/default_landing_pages"
            android:defaultValue="@string/apps"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="pref_clear_auto_start"
            android:title="@string/pref_clear_auto_start_title"
            android:summary="@string/pref_clear_auto_start_summary"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_custom_scaling_enabled"
            android:title="@string/pref_custom_scaling_enabled_title"
            android:summary="@string/pref_custom_scaling_enabled_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:dependency="pref_custom_scaling_enabled"
            android:key="pref_scaling"
            android:title="@string/pref_scaling_title"
            android:inputType="number"
            android:defaultValue="1"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_opt_in"
            android:title="@string/opt_in_preference"
            android:summary="@string/opt_in_preference_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_proot_category"
        android:key="pref_proot_category"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:key="pref_proot_debug_enabled"
            android:title="@string/pref_proot_debugging_enabled_title"
            android:summary="@string/pref_proot_debugging_enabled_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <ListPreference
            android:dependency="pref_proot_debug_enabled"
            android:key="pref_proot_debug_level"
            android:title="@string/pref_proot_debugging_level_title"
            android:summary="@string/pref_proot_debugging_level_summary"
            android:entries="@array/proot_debug_levels"
            android:entryValues="@array/proot_debug_levels"
            android:defaultValue="@string/pref_proot_debugging_level_default"
            app:iconSpaceReserved="false"/>
        <Preference
            android:dependency="pref_proot_debug_enabled"
            android:key="pref_proot_delete_debug_file"
            android:title="@string/pref_proot_delete_debug_file_title"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/sov_category"
        android:key="sov_category"
        app:iconSpaceReserved="false">
        <Preference
            android:key="sov_enable_all_perms"
            android:title="@string/sov_enable_all_perms_title"
            android:summary="@string/sov_enable_all_perms_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="sov_open_downloads"
            android:title="@string/sov_open_downloads_title"
            android:summary="@string/sov_open_downloads_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="sov_manage_storage"
            android:title="@string/sov_manage_storage_title"
            android:summary="@string/sov_manage_storage_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="sov_overlay_perm"
            android:title="@string/sov_overlay_title"
            android:summary="@string/sov_overlay_summary"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="sov_edge_panel_enabled"
            android:title="@string/sov_edge_panel_title"
            android:summary="@string/sov_edge_panel_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="sov_billing_disabled"
            android:title="@string/sov_billing_off_title"
            android:summary="@string/sov_billing_off_summary"
            android:defaultValue="true"
            android:enabled="false"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="sov_accessibility_enabled"
            android:title="@string/sov_accessibility_title"
            android:summary="@string/sov_accessibility_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="sov_signing_required"
            android:title="@string/sov_signing_required_title"
            android:summary="@string/sov_signing_required_summary"
            android:defaultValue="true"
            android:enabled="false"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>