<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edge_panel"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#DD101010"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sov_category"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:paddingBottom="6dp" />

    <Button
        android:id="@+id/btn_open_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btn_enable_all_perms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sov_enable_all_perms_title" />

    <Button
        android:id="@+id/btn_open_downloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sov_open_downloads_title" />
</LinearLayout>
